[package]
name = "bluetooth-mqtt-notifier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
btleplug = { version = "0.10", features = ["serde"] }
futures = "0.3.28"
paho-mqtt = "0.12.1"
pretty_env_logger = "0.5.0"
regex = "1.9.0"
time = "0.3.22"
tokio = { version = "1", features = ["full"] }
